Edit menu items & fix a bug in menu on mobile

--- a/style.css
+++ b/style.css
@@ -219,6 +219,7 @@ body {
 .header {
   padding-top: 30px;
   padding-bottom: 30px;
+  z-index: 1;
 }
 .header__container {
   min-width: 300px;
@@ -238,7 +239,7 @@ body {
           justify-content: space-between;
   -webkit-column-gap: 1rem;
      -moz-column-gap: 1rem;
-          column-gap: 1rem;                     
+          column-gap: 1rem;                             
 }
 .header__logo {
   z-index: 1;
@@ -407,7 +408,7 @@ body {
             align-items: center;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
-            justify-content: space-between;        
+            justify-content: space-between;           
   }
   .header__menu_open {
     top: 0;
@@ -458,6 +459,7 @@ body {
   letter-spacing: -0.5px;
   word-spacing: -20px;
   position: relative;
+  z-index: -1;
 }
 .main-screen__heading::after {
   content: '';
@@ -623,6 +625,7 @@ body {
 .features__slider {
   display: none;
   position: relative;
+  z-index: -1;
 }
 .features__slider-arrow {
   display: none;
